# alex

./: .alexattribute  .gitignore  CMakeLists.txt  DESIGN.md  Matplot.ipynb  NOTE.md  PyTorch_ONNX_export.ipynb  README.md  ResizeFunctionAnalysis.ipynb  TODO.md  TensorFlow_ResizeBilinear.2x2.ipynb  TensorFlow_ResizeBilinear.3x3.ipynb  TensorFlow_ResizeBilinear.ipynb  UC01  action.py  alex  bplate-inject  compute.memreq.mas  example.mcsm  export_ALBERT.py  export_MobileBERT.py  mas-onnx  mas-tflite  memreq  model_report.yaml  optimus.mas  run-optimus  spec.py  test  test-optimus  test.sh  tf.image.resize.tfgex  tf.math.sigmoid.tfgex  tf.nn.conv2d_transpose.tfgex  tf.nn.leaky_relu.tfgex  tf.transpose.tfgex  tutorial.diff
code/: CMakeLists.txt
code/A/: CMakeLists.txt  example.cpp
code/caffekit/: CMakeLists.txt  requires.cmake
code/caffekit/src/: Main.cpp
code/cana-core/: CMakeLists.txt  README.md
code/cana-core/run/: .gitignore  Makefile  appconf.json  coreconf.json
code/cana-core/src/: CMakeLists.txt
code/cana-ext-capture/: CMakeLists.txt
code/cana-ext-capture/run/: .gitignore  Makefile  appconf.json  sample.cpp  toolconf.json
code/cana-ext-capture/src/: action.cpp  action.h  app.cpp  app.h  entry.cpp  plugin.json
code/cana-ext-lua/: CMakeLists.txt  Makefile
code/cana-ext-lua/mod/: CMakeLists.txt
code/cana-ext-lua/run/: Makefile  appconf.json  coreconf.json
code/cana-references/: README.md
code/cana-references/toybox/: .gitmodules  CMakeLists.txt
code/chrome-tracing/: README.md
code/clap/: CMakeLists.txt
code/clap/000/: design.cpp  example.inl
code/cleo/: CMakeLists.txt  sample.cpp
code/cleo-core/: CMakeLists.txt  sample.cpp
code/cleo-core/src/: Runner.cpp
code/cleo-core/test/: App.cpp  Args.cpp  Runner.cpp  Service.cpp  Trail.cpp
code/cleo-dev/: CMakeLists.txt  README.md  sample.cpp
code/cleo-dev/src/: SelectApp.cpp
code/cleo/include/: cleo.h
code/cleo/src/: App.cpp  Args.cpp  Service.cpp  StandaloneApp.cpp  Trail.cpp
code/clip/: CMakeLists.txt  clip.example.cpp
code/coma/: CMakeLists.txt  README.md  design.cpp
code/csv2html/: CMakeLists.txt
code/csv2html/src/: main.cpp
code/dla-dbg/: CMakeLists.txt  DESIGN.md  dbg.cpp  gen.cpp
code/encaf/: README.md  app.manifest  app.py  requirements.txt  test_app.py
code/encaf/encaf/: core.py  tflite.py
code/ensemble/: CMakeLists.txt  design.cpp
code/eve/: CMakeLists.txt  eve.test.cpp
code/fipe/: CMakeLists.txt  fipe.test.cpp
code/fipe/include/: fipe.hpp
code/gulf/: CMakeLists.txt  gulf.test.cpp
code/gulf/include/: gulf.hpp
code/hermes/: CMakeLists.txt  runtest  sample.cpp
code/hermes/include/: hermes.h
code/hermes/src/: hermes.cpp
code/isa/: CMakeLists.txt  isa.cpp
code/lapse/: CMakeLists.txt  examples.cpp
code/lapse/include/: lapse.h
code/manta/: design.cpp
code/memreserve/: CMakeLists.txt  memreserve.test.cpp
code/nn-cmake/modules/: ExternalProject.cmake  ExternalSource.cmake  add_subdirectories.cmake
code/nn-nnc/: CMakeLists.txt
code/nn-nnc/core/: CMakeLists.txt
code/nn-nni/: CMakeLists.txt
code/nn-nni/src/: nni.cpp
code/nn-nnrt/: CMakeLists.txt
code/nn-nnrt/intf/: CMakeLists.txt
code/nn-pepper/: CMakeLists.txt
code/nn-pepper/src/: span.test.cpp
code/nn-rambda/: CMakeLists.txt
code/nn-rambda/src/: compose.test.cpp  transduce.test.cpp
code/nn-stdex/: CMakeLists.txt
code/nn-stdex/src/: set.test.cpp
code/nn-tensor/: CMakeLists.txt
code/nn-tensor/src/: enumerator.cpp  enumerator.test.cpp  index.cpp  index.test.cpp  lexical_layout.cpp  lexical_layout.test.cpp  overlay.test.cpp  shape.cpp  shape.test.cpp
code/nn-traits/: CMakeLists.txt
code/nn-traits/src/: DLinked.test.cpp
code/pepper-archive/: CMakeLists.txt  Specfile
code/pepper-assert/: CMakeLists.txt  assert.cpp
code/pepper-benchmark/: CMakeLists.txt  example.cpp
code/pepper-build/: CMakeLists.txt  README.md
code/pepper-build/adapter/: cmake.hpp
code/pepper-build/libs/: CMakeLists.txt
code/pepper-build/src/: main.cpp
code/pepper-extra/: cli.hpp  compress.cpp  compress.hpp  dict.hpp  except.hpp  exec.cpp  exec.hpp  format.cpp  format.hpp  fs.hpp  json.hpp  log.cpp  log.hpp  logging.hpp  lua.cpp  lua.hpp  opt.hpp  owned.hpp  passwd.cpp  passwd.hpp  pathname.hpp  property.hpp  rope.hpp  sign.cpp  sign.hpp  stream.hpp  string.hpp  subst.cpp  subst.hpp  test.cpp  tpl.hpp  xml.hpp
code/pepper-extra/cli/: log.cpp  log.hpp
code/pepper-extra/fs/: base.cpp  base.hpp  log.cpp  log.hpp  sync.hpp
code/pepper-extra/json/: archive.hpp  field.hpp  header.cpp  header.hpp  json.forward.hpp  loader.cpp  loader.hpp  util.cpp  util.hpp  value.hpp
code/pepper-extra/logging/: logger.hpp  util.cpp  util.hpp
code/pepper-extra/owned/: allocator.hpp  map.hpp  nested_map.hpp  ptr.hpp  table.hpp
code/pepper-extra/pathname/: base.cpp  base.hpp  dir.cpp  dir.forward.hpp  dir.hpp  file.cpp  file.forward.hpp  file.hpp  glob.cpp  glob.hpp  glob.test.cpp  log.cpp  log.hpp  subdir.hpp
code/pepper-optparse/: CMakeLists.txt  pepper-project.json
code/pepper-str/: CMakeLists.txt  test.cpp
code/pepper-strcast/: CMakeLists.txt  README.md
code/pepper-strcast-dev/: CMakeLists.txt  README.md
code/pepper-tokens/: CMakeLists.txt  Makefile  Specfile
code/sample/: app.py
code/sample-app-BASH/: app.manifest
code/sample-app-Python/: app.manifest  app.py
code/tagged/: Makefile  lib.h  sample.cpp  tag.lst
code/tf-recipies/: README.md  main.py
code/tfgex-1.13.2/: README.md  app.py
code/tfgraph/: .gitignore  tfgraph  use.py
code/tvm/: CMakeLists.txt  sample.cpp
code/unnamed/: CMakeLists.txt
code/voca/: CMakeLists.txt  REACTIVE.md  design.cpp
code/xray/: CMakeLists.txt  tracee.cpp  tracer.cpp
twslint/: .pylintrc  Makefile  README.rst  example.only_txt_files.twslintrc  example.txt_and_md_files.twslintrc  pyproject.toml
twslint/examples/: with_trailing_space.md  with_trailing_space.txt
twslint/twslint/: app.py
txlint/: Makefile  README.rst  pyproject.toml
txlint/tests/: test_txlint.py
txlint/tutorial/: example.txlintrc
txlint/txlint/: app.py
(+1046 files in other folders)
